# sw3526-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: error.rs  lib.rs  model.rs
