[package]
name = "sw3526"
version = "0.1.1"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A SW3526 driver based on [embedded-hal](https://crates.io/crates/embedded-hal). Support `async` and `sync` features."
keywords = ["embedded", "hal", "i2c", "sw3526", "async"]
repository = "https://github.com/IvanLi-CN/sw3526-rs"

[dependencies]
log = { version = "0.4.21" }

embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async-cfg = "0.2.4"
num_enum = { version = "0.7.2", default-features = false }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 0

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
async = ["dep:embedded-hal-async"]
